# changedetector

./: MANIFEST.in  README.md  setup.cfg  setup.py  test.py
.github/workflows/: python-testpypi-publish.yml
changedetector/: __init__.py  detectchange.py
changedetector/tests/: test.py
src/changedetector/: detectchange.py
tests/: test.py
