[metadata]
name = changedetector
version = 0.0.1
author =  Lux Luth
author_email = luxusluth@gmail.com
description = A basic change detector for the Python, Ruby and C++.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Chaton-mechant/changedetector
project_urls =
    Bug Tracker = https://github.com/Chaton-mechant/changedetector/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src
